--- a/tests/dev_processor_tests.ipynb
+++ b/tests/dev_processor_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,10 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import shutil\n",
     "\n",
     "import massipipe.processors as mpp\n",
+    "import massipipe\n",
     "import massipipe.utils as mpu\n",
     "from massipipe.pipeline import PipelineProcessor\n"
    ]
@@ -22,10 +24,41 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mha114\\Dropbox\\Python\\massipipe\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get Massipipe root directory\n",
+    "mp_root = Path(massipipe.__file__).parent.parent\n",
+    "print(mp_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new temporary directory with example dataset\n",
+    "# temp_dataset_dir = mp_root / 'tmp'\n",
+    "#     with zipfile.ZipFile(EXAMPLE_DATA_PATH, mode=\"r\") as zip_file:\n",
+    "#         zip_file.extractall(path=tmp_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22:05:59 INFO: File logging initialized.\n"
+      "16:49:38 INFO: File logging initialized.\n"
      ]
     }
    ],
@@ -34,6 +67,27 @@
     "pp = PipelineProcessor(\n",
     "    Path(\"example_data/massimal_larvik_olbergholmen_202308301001-test_hsi\")\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16:49:40 INFO: ---- QUICKLOOK IMAGE GENERATION ----\n",
+      "16:49:40 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_5.bil.hdr\n",
+      "c:\\Users\\mha114\\Miniconda3\\envs\\massipipe\\lib\\site-packages\\rasterio\\__init__.py:327: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
+      "  dataset = writer(\n",
+      "16:49:40 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_8.bil.hdr\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp.create_quicklook_images()"
    ]
   },
   {
