Testing using yaml file with massipipe options

--- a/notebooks/modify_datasets/distribute_yaml_config_hsi/demo_read_write_yaml.ipynb
+++ b/notebooks/modify_datasets/distribute_yaml_config_hsi/demo_read_write_yaml.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,27 +29,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'datetime': None,\n",
-       " 'grouping': None,\n",
+       "{'grouping': None,\n",
        " 'area': None,\n",
+       " 'datetime': None,\n",
        " 'nfiles': None,\n",
        " 'organisation': 'UiT',\n",
        " 'mosaic': True,\n",
        " 'classify': False,\n",
-       " 'publish': True,\n",
-       " 'theme': 'Seabirds',\n",
+       " 'publish': False,\n",
+       " 'theme': 'Habitat',\n",
        " 'spectrum_type': 'HSI',\n",
        " 'creator_name': 'Martin H. Skjelvareid',\n",
-       " 'project': 'Massimal'}"
+       " 'project': 'Massimal',\n",
+       " 'massipipe_options': {'create_products': {'radiance': True,\n",
+       "   'radiance_sgc': True,\n",
+       "   'reflectance': True,\n",
+       "   'reflectance_sgc': True},\n",
+       "  'create_mosaics': {'radiance': False,\n",
+       "   'radiance_sgc': False,\n",
+       "   'reflectance': False,\n",
+       "   'reflectance_sgc': False},\n",
+       "  'sgc': {'reference_image_numbers': None,\n",
+       "   'reflectance_sgc_method': 'flat_spec'}}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,27 +89,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'datetime': None,\n",
-       " 'grouping': None,\n",
+       "{'grouping': None,\n",
        " 'area': None,\n",
+       " 'datetime': None,\n",
        " 'nfiles': 3,\n",
        " 'organisation': 'UiT',\n",
        " 'mosaic': True,\n",
        " 'classify': False,\n",
-       " 'publish': True,\n",
-       " 'theme': 'Seabirds',\n",
+       " 'publish': False,\n",
+       " 'theme': 'Habitat',\n",
        " 'spectrum_type': 'HSI',\n",
        " 'creator_name': 'Martin H. Skjelvareid',\n",
-       " 'project': 'Massimal'}"
+       " 'project': 'Massimal',\n",
+       " 'massipipe_options': {'create_products': {'radiance': True,\n",
+       "   'radiance_sgc': True,\n",
+       "   'reflectance': True,\n",
+       "   'reflectance_sgc': True},\n",
+       "  'create_mosaics': {'radiance': False,\n",
+       "   'radiance_sgc': False,\n",
+       "   'reflectance': False,\n",
+       "   'reflectance_sgc': False},\n",
+       "  'sgc': {'reference_image_numbers': None,\n",
+       "   'reflectance_sgc_method': 'flat_spec'}}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
