--- a/tests/dev_processor_tests.ipynb
+++ b/tests/dev_processor_tests.ipynb
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16:49:38 INFO: File logging initialized.\n"
+      "16:50:50 INFO: File logging initialized.\n"
      ]
     }
    ],
@@ -71,23 +71,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16:49:40 INFO: ---- QUICKLOOK IMAGE GENERATION ----\n",
-      "16:49:40 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_5.bil.hdr\n",
+      "16:50:54 INFO: ---- QUICKLOOK IMAGE GENERATION ----\n",
+      "16:50:54 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_5.bil.hdr\n",
       "c:\\Users\\mha114\\Miniconda3\\envs\\massipipe\\lib\\site-packages\\rasterio\\__init__.py:327: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
       "  dataset = writer(\n",
-      "16:49:40 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_8.bil.hdr\n"
+      "16:50:54 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_8.bil.hdr\n"
      ]
     }
    ],
    "source": [
     "pp.create_quicklook_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('example_data/massimal_larvik_olbergholmen_202308301001-test_hsi/1b_radiance_gc/rgb/massimal_larvik_olbergholmen_202308301001-test_hsi_000_radiance_gc_rgb.tiff'),\n",
+       " WindowsPath('example_data/massimal_larvik_olbergholmen_202308301001-test_hsi/1b_radiance_gc/rgb/massimal_larvik_olbergholmen_202308301001-test_hsi_001_radiance_gc_rgb.tiff')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pp.rad_gc_rgb_im_paths\n"
    ]
   },
   {
