--- a/tests/dev_processor_tests.ipynb
+++ b/tests/dev_processor_tests.ipynb
@@ -24,41 +24,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mha114\\Dropbox\\Python\\massipipe\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get Massipipe root directory\n",
-    "mp_root = Path(massipipe.__file__).parent.parent\n",
-    "print(mp_root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create new temporary directory with example dataset\n",
-    "# temp_dataset_dir = mp_root / 'tmp'\n",
-    "#     with zipfile.ZipFile(EXAMPLE_DATA_PATH, mode=\"r\") as zip_file:\n",
-    "#         zip_file.extractall(path=tmp_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16:50:50 INFO: File logging initialized.\n"
+      "16:52:41 INFO: File logging initialized.\n"
      ]
     }
    ],
@@ -78,11 +47,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16:50:54 INFO: ---- QUICKLOOK IMAGE GENERATION ----\n",
-      "16:50:54 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_5.bil.hdr\n",
-      "c:\\Users\\mha114\\Miniconda3\\envs\\massipipe\\lib\\site-packages\\rasterio\\__init__.py:327: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
-      "  dataset = writer(\n",
-      "16:50:54 INFO: Creating quicklook version of OlbergholmenS1_Pika_L_8.bil.hdr\n"
+      "16:52:44 INFO: ---- QUICKLOOK IMAGE GENERATION ----\n",
+      "16:52:44 INFO: Image massimal_larvik_olbergholmen_202308301001-test_hsi_000_quicklook.png exists - skipping.\n",
+      "16:52:44 INFO: Image massimal_larvik_olbergholmen_202308301001-test_hsi_001_quicklook.png exists - skipping.\n"
      ]
     }
    ],
